--- a/custom_components/samsvolleyball/manifest.json
+++ b/custom_components/samsvolleyball/manifest.json
@@ -8,5 +8,6 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/kloemi/ha-sams-volleyball",
   "loggers": ["samsvolleyball"],
+  "requirements": ["websocket-client"],
   "version": "v0.0.0"
 }
