--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,60 +1,24 @@
 repos:
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.8.1
     hooks:
-      - id: pyupgrade
-        args: ["--py310-plus"]
-  - repo: https://github.com/ambv/black
-    rev: 23.1.0
-    hooks:
-      - id: black
-        language_version: python3
-        args:
-          - --safe
-          - --quiet
-        files: ^(custom_components/samsvolleyball/.+)?[^/]+\.py$
+      - id: ruff
+        args: [--fix]
+      - id: ruff-format
+        files: ^((custom_components|sams_volleyball)/.+)?[^/]+\.(py|pyi)$
+
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
+    rev: v2.3.0
     hooks:
       - id: codespell
         args:
-          - --ignore-words-list=hass,alot,datas,dof,dur,farenheit,hist,iff,ines,ist,lightsensor,mut,nd,pres,referer,ser,serie,te,technik,ue,uint,visability,wan,wanna,withing,iam,incomfort
-          - --skip="./.*,*.csv,*.json"
+          - --ignore-words-list=astroid,checkin,currenty,hass,iif,incomfort,lookin,nam,NotIn
+          - --skip="./.*,*.csv,*.json,*.ambr"
           - --quiet-level=2
         exclude_types: [csv, json]
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-docstrings==1.6.0
-        files: ^custom_components/samsvolleyball/.+\.py$
-        args:
-          - --max-line-length=500
-          - --ignore=E203,E266,E501,W503
-          - --max-complexity=18
-          - --select=B,C,E,F,W,T4,B9
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.4
-    hooks:
-      - id: bandit
-        args:
-          - --quiet
-          - --format=custom
-          - --configfile=bandit.yaml
-        files: ^custom_components/samsvolleyball/.+\.py$
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        args:
-          - --multi-line=3
-          - --trailing-comma
-          - --force-grid-wrap=0
-          - --use-parentheses
-          - --line-width=88
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0
     hooks:
       - id: check-executables-have-shebangs
         stages: [manual]
@@ -63,11 +27,12 @@ repos:
       - id: check-docstring-first
       - id: check-yaml
       - id: debug-statements
+
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
+    rev: v3.0.3
     hooks:
       - id: prettier
-        stages: [manual]
+
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: "v0.991"
     hooks:
